violet: overlay: Enable performant auth feature
Change-Id: I76f0c3242f7cb16b4ddc8ed5e4bfcb35b65cc8ff
Signed-off-by: Niranjan BR <niranjankannan2003@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -649,4 +649,7 @@
      sending a request to enable or disable the camera while the video session is also
      paused. -->
     <bool name="config_useVideoPauseWorkaround">true</bool>
+
+    <!-- Default value for performant auth feature. -->
+    <bool name="config_performantAuthDefault">true</bool>
 </resources>
